objects/LAT_ClientAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>Brigade_Training__c</fullName>
        <description>Capacitação da Brigada (ex: treinamentos)</description>
        <inlineHelpText>Capacitação da Brigada (ex: treinamentos)</inlineHelpText>
        <label>Capacitação da Brigada</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenges_Plan__c</fullName>
        <description>Pensando nesses objetivos quais são as principais barreiras ou desafios?</description>
        <inlineHelpText>Pensando nesses objetivos quais são as principais barreiras ou desafios?</inlineHelpText>
        <label>Principais barreiras ou desafios?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comercial_Adhesion__c</fullName>
        <description>Aderência ao ciclo comercial PRB, ou seja, executa às atividades de ativação propostas (ex: Chivas ação copos)</description>
        <inlineHelpText>Aderência ao ciclo comercial PRB, ou seja, executa às atividades de ativação propostas (ex: Chivas ação copos)</inlineHelpText>
        <label>Aderência ao ciclo comercial PRB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Participation__c</fullName>
        <description>Qual é a participação da PRB no negócio do cliente ou na categoria de bebidas?</description>
        <inlineHelpText>Qual é a participação da PRB no negócio do cliente ou na categoria de bebidas?</inlineHelpText>
        <label>Participação no negócio do cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Menos 10%</fullName>
                </value>
                <value>
                    <fullName>de 11% a 20%</fullName>
                </value>
                <value>
                    <fullName>de 21% a 30%</fullName>
                </value>
                <value>
                    <fullName>de 31% a 50%</fullName>
                </value>
                <value>
                    <fullName>Mais de 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Services__c</fullName>
        <description>Serviços prestados pelo cliente (ex: On Trade - música ao vivo, DJ, coquetelaria, manobrista, rituais, Off Trade - equipe dedicada, merchandising)</description>
        <inlineHelpText>Serviços prestados pelo cliente (ex: On Trade - música ao vivo, DJ, coquetelaria, manobrista, rituais, Off Trade - equipe dedicada, merchandising)</inlineHelpText>
        <label>Serviços prestados pelo cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Cause__c</fullName>
        <label>Distribuição (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Situation__c</fullName>
        <label>Distribuição (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Cause__c</fullName>
        <label>Experiência (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Situation__c</fullName>
        <label>Experiência (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_Plan__c</fullName>
        <description>Quais são os objetivos para o cliente a curto, médio e longo prazo?</description>
        <inlineHelpText>Quais são os objetivos para o cliente a curto, médio e longo prazo?</inlineHelpText>
        <label>Quais são os objetivos para o cliente?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logistic__c</fullName>
        <description>Logística (ex: frota, lead time)</description>
        <inlineHelpText>Logística (ex: frota, lead time)</inlineHelpText>
        <label>Logística</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Cause__c</fullName>
        <label>Positivação (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Situation__c</fullName>
        <label>Positivação (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Cause__c</fullName>
        <label>Preço (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Situation__c</fullName>
        <label>Preço (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priorities__c</fullName>
        <description>Quais são as prioridades do cliente agora?</description>
        <inlineHelpText>Quais são as prioridades do cliente agora?</inlineHelpText>
        <label>Prioridades do cliente agora</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Cause__c</fullName>
        <label>Promoção (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Situation__c</fullName>
        <label>Promoção (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recomendation_Cause__c</fullName>
        <label>Recomendação (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recomendation_Situation__c</fullName>
        <label>Recomendação (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesAcademy__c</fullName>
        <label>Academia de Vendas</label>
        <referenceTo>LAT_SalesAcademy__c</referenceTo>
        <relationshipLabel>Análise do Cliente</relationshipLabel>
        <relationshipName>Analise_do_Cliente</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shopper__c</fullName>
        <label>Shopper / Consumidor (Quem é?)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Plan__c</fullName>
        <label>Qual é o Plano estratégico do cliente?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_Plan__c</fullName>
        <description>Em sua análise quais os pontos fortes e oportunidades de desenvolvimento?</description>
        <inlineHelpText>Em sua análise quais os pontos fortes e oportunidades de desenvolvimento?</inlineHelpText>
        <label>Pontos fortes e oportunidades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Training__c</fullName>
        <description>Capacitação do time de vendas (ex: treinamentos)</description>
        <inlineHelpText>Capacitação do time de vendas (ex: treinamentos)</inlineHelpText>
        <label>Capacitação do time de vendas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visibility_Cause__c</fullName>
        <label>Visibilidade (Causas)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visibility_Situation__c</fullName>
        <label>Visibilidade (Situação)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Análise do Cliente</label>
    <nameField>
        <displayFormat>ANC-{000}</displayFormat>
        <label>Análise do Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análise do Cliente</pluralLabel>
    <recordTypes>
        <fullName>LAT_Distribuicao</fullName>
        <active>true</active>
        <label>Distribuição</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Modern_Trade</fullName>
        <active>true</active>
        <label>Modern Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_On_Trade</fullName>
        <active>true</active>
        <label>On Trade\Eventos</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>